# gtl

./: .gitignore  README.md  briefing.md  pyproject.toml
src/gtl/: __init__.py  bigquery.py  cli.py  git.py  schema.sql  sync.py
tests/: __init__.py
